# avr

./: .clang-format  .gitignore  .gitmodules  Jenkinsfile  Makefile  README.md
EGSE/SunS_Fixture/firmware/: CMakeLists.txt  main.cpp
EPS_A/: CMakeLists.txt
EPS_A/eps_libs/: CMakeLists.txt
EPS_A/eps_libs/IOMap/: CMakeLists.txt  IOMap.h
EPS_A/eps_libs/MainTimer/: CMakeLists.txt  MainTimer.cpp  MainTimer.h
EPS_A/eps_libs/MpptUpdater/: CMakeLists.txt  MpptUpdater.h
EPS_A/eps_libs/ObcWatchdog/: CMakeLists.txt  ObcWatchdog.h
EPS_A/eps_libs/PowerCycle/: CMakeLists.txt  PowerCycle.cpp  PowerCycle.h
EPS_A/eps_libs/PowerCycle/Include/PowerCycle/: PowerCycle.h
EPS_A/eps_libs/TelemetryUpdater/: CMakeLists.txt  TelemetryUpdater.h
EPS_A/eps_libs/Temperatures/: Temperatures.h
EPS_A/eps_libs/ThermalKnives/: CMakeLists.txt  ThermalKnives.h
EPS_A/eps_libs/commands/: CMakeLists.txt
EPS_A/eps_libs/commands/commands/: DisableOverheatProtection.h  LCL.h  ObcWatchdog.h  PowerCycle.h  ThermalKnives.h
EPS_A/eps_libs/settings/: CMakeLists.txt  settings.cpp  settings.h
EPS_A/eps_libs/telemetry/: CMakeLists.txt  telemetry.h
EPS_A/eps_unit_tests/: CMakeLists.txt  main.cpp
EPS_A/eps_unit_tests/src/: LCLCommands.cpp  MainTimer.cpp  MpptUpdater.cpp  ObcWatchdog.cpp  TelemetryUpdater.cpp  Temperatures.cpp  ThermalKnives.cpp  check_pins.cpp
EPS_A/src/: CMakeLists.txt  main.cpp
EPS_A/src/eps/: eps.cpp  eps.h  main.h
EPS_B/: CMakeLists.txt
EPS_B/eps_libs/: CMakeLists.txt
EPS_B/eps_libs/IOMap/: CMakeLists.txt  IOMap.h
EPS_B/eps_libs/MainTimer/: MainTimer.cpp  MainTimer.h
EPS_B/eps_libs/TelemetryUpdater/: CMakeLists.txt  TelemetryUpdater.h
EPS_B/eps_libs/Temperatures/: CMakeLists.txt  Temperatures.h
EPS_B/eps_libs/commands/: CMakeLists.txt
EPS_B/eps_libs/commands/commands/: PowerCycle.h
EPS_B/eps_libs/settings/: CMakeLists.txt  settings.cpp  settings.h
EPS_B/eps_libs/telemetry/: telemetry.h
EPS_B/eps_unit_tests/: CMakeLists.txt  main.cpp
EPS_B/eps_unit_tests/src/: MainTimer.cpp  TelemetryUpdater.cpp  Temperatures.cpp  check_pins.cpp
EPS_B/src/: CMakeLists.txt  main.cpp
EPS_B/src/eps/: eps.cpp  eps.h  main.h
PLD/: CMakeLists.txt
PLD/pld_libs/: CMakeLists.txt
PLD/pld_libs/commands/: CMakeLists.txt
PLD/pld_libs/devices/: CMakeLists.txt
PLD/pld_libs/devices/Include/: AD7714.h  AD7714_driver.h  RadfetAdc.h  Watchdog.h
PLD/pld_libs/drivers/Include/: AD7714.h
PLD/pld_libs/hardware/: CMakeLists.txt  mock.cpp  radfet.cpp  real.cpp
PLD/pld_libs/telecommands/: CMakeLists.txt
PLD/pld_libs/telemetry/: CMakeLists.txt
PLD/src/: CMakeLists.txt  hw.cpp  hw.h  main.cpp  telemetry.h
PLD/src/debug/: commands.h  mock.cpp
PLD/src/telecommands/: CMakeLists.txt  HouseKeeping.h  PT1000.h  Photodiodes.h  RadFET.h  SunSref.h
PLD/src/telemetry/: CMakeLists.txt  telemetry.cpp
PLD/unit_tests_pld/: CMakeLists.txt  main.cpp
PLD/unit_tests_pld/src/: AD7714.cpp  AD7714_driver.cpp  RadfetAdc.cpp  commands.cpp  telecommands.cpp
SunS/: .gitignore  CMakeLists.txt
SunS/src/: CMakeLists.txt  main.cpp
SunS/src/debug/: commands.h  mock.cpp
SunS/suns_libs/: CMakeLists.txt
SunS/suns_libs/commands/: CMakeLists.txt
SunS/suns_libs/hardware/: CMakeLists.txt  mock.cpp  real.cpp
SunS/suns_libs/helpers/: CMakeLists.txt
SunS/suns_libs/telecommands/: CMakeLists.txt
SunS/suns_libs/telemetry/: CMakeLists.txt
SunS/unit_tests_suns/: CMakeLists.txt  main.cpp
SunS/unit_tests_suns/src/: commands.cpp  telecommands.cpp
libs/: CMakeLists.txt
libs/BatteryManager/: BatteryHeater.h  BatteryManager.h  CMakeLists.txt
libs/EepromCounter/: CMakeLists.txt  EepromCounter.h
libs/LclCommander/: CMakeLists.txt  LclCommander.h
libs/LclInterface/: CMakeLists.txt  LclInterface.h
libs/ObcInterface/: CMakeLists.txt
libs/ObcInterface/Include/ObcInterface/: Command.h  CommandDispatcher.h  ObcInterface.h
libs/ObcWatchdog/: ObcWatchdog.h
libs/OverheatProtection/: CMakeLists.txt  OverheatProtection.h
libs/PowerCycle/: PowerCycle.h
libs/PowerCycleCounter/: CMakeLists.txt  PowerCycleCounter.cpp  PowerCycleCounter.h
libs/Prescaler/: CMakeLists.txt  Prescaler.h
libs/SoftwareTimer/: CMakeLists.txt  SoftwareTimer.h
libs/SoftwareTimer/Include/: SoftwareTimer.h
libs/TelemetryBuffer/: CMakeLists.txt
libs/TelemetryBuffer/Include/TelemetryBuffer/: TelemetryBuffer.h
libs/TemperatureSensorsValidation/: CMakeLists.txt  TemperatureSensorsValidation.cpp  TemperatureSensorsValidation.h
libs/ThermalKnives/: CMakeLists.txt  ThermalKnives.h
libs/TwoStateFsm/: CMakeLists.txt  TwoStateFsm.h
libs/atomic/: CMakeLists.txt  atomic.h
libs/calibration/: CMakeLists.txt  LMT87.cpp  TMP121.cpp
libs/calibration/Include/calibration/: Adc.h  LMT87.h  TMP121.h  VoltageDivider.h
libs/eps/: CMakeLists.txt  calibration.h  defs.h  eps.h  init.cpp  obc_interface.cpp  periodics.cpp
libs/eps_commands/: CMakeLists.txt
libs/eps_commands/commands/: DisableOverheatProtection.h  DisablePowerCycle.h  LCL.h  ObcWatchdog.h  PowerCycle.h  ThermalKnives.h
libs/logger/: CMakeLists.txt  logger.cpp  logger.h
libs/redundancy/: CMakeLists.txt  redundancy.h
tests/SingleDeviceTests/: CMakeLists.txt  README.md  main.cpp
tests/SingleDeviceTests/ObcInterface/: ObcInterface.cpp
tests/SingleDeviceTests/drivers/: ObcInterface.cpp
tests/SingleDeviceTests/unity/: CMakeLists.txt
tests/unit_tests/: CMakeLists.txt  main.cpp
tests/unit_tests/src/: Atomic.cpp  BatteryManager.cpp  CommandDispatcher.cpp  CommandDispatcherTest.cpp  LclCommander.cpp  LclInterface.cpp  TelemetryBuffer.cpp  TwoStateFsm.cpp  calibration.cpp  redundancy.cpp
tests/unit_tests_a/: CMakeLists.txt  main.cpp
tests/unit_tests_a/src/: CommandDispatcherTest.cpp  LclCommander.cpp  LclInterface.cpp  PowerCycleCounter.cpp  Prescaler.cpp  SoftwareTimer.cpp  calibration.cpp  redundancy.cpp
tests/unit_tests_b/: CMakeLists.txt  main.cpp
tests/unit_tests_b/src/: BatteryHeater.cpp  BatteryManager.cpp  DisablePowerCycle.cpp  LCLCommands.cpp  ObcWatchdog.cpp  OverheatProtection.cpp  TemperatureChecks.cpp  ThermalKnives.cpp
(+54 files in other folders)
