add_subdirectory(atomic)
add_subdirectory(calibration)
add_subdirectory(EepromCounter)
add_subdirectory(BatteryManager)
add_subdirectory(external)
add_subdirectory(LclCommander)
add_subdirectory(LclInterface)
add_subdirectory(logger)
add_subdirectory(ObcInterface)
add_subdirectory(PowerCycleCounter)
add_subdirectory(Prescaler)
add_subdirectory(redundancy)
add_subdirectory(SoftwareTimer)
add_subdirectory(TwoStateFsm)
