add_subdirectory(atomic)
add_subdirectory(BatteryManager)
add_subdirectory(calibration)
add_subdirectory(EepromCounter)
add_subdirectory(eps)
add_subdirectory(eps_commands)
add_subdirectory(external)
add_subdirectory(LclCommander)
add_subdirectory(LclInterface)
add_subdirectory(logger)
add_subdirectory(ObcInterface)
add_subdirectory(ObcWatchdog)
add_subdirectory(OverheatProtection)
add_subdirectory(PowerCycle)
add_subdirectory(PowerCycleCounter)
add_subdirectory(Prescaler)
add_subdirectory(redundancy)
add_subdirectory(SoftwareTimer)
add_subdirectory(TemperatureSensorsValidation)
add_subdirectory(ThermalKnives)
add_subdirectory(TwoStateFsm)